--- a/more.html
+++ b/more.html
@@ -11,6 +11,23 @@
         <a href="">About</a>
         <a href=""> Contact Us</a>
         <a href="">Ideas</a>
+
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href=""> Contact Us</a>
+        <a href="">Ideas</a>
+
+
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href=""> Contact Us</a>
+        <a href="">Ideas</a>
+
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href=""> Contact Us</a>
+        <a href="">Ideas</a>
+        
     </div>
 </body>
 </html>
